--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
     "styled-components": "^6.1.8",
+    "tailwindcss": "^3.4.3",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
@@ -28,13 +29,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "eject": "react-scripts eject",
+    "format": "prettier --write \"src/**/*.ts\""
   },
   "browserslist": {
     "production": [
@@ -49,6 +45,18 @@
     ]
   },
   "devDependencies": {
-    "@types/styled-components": "^5.1.34"
+    "@babel/plugin-proposal-private-property-in-object": "^7.16.0",
+    "@eslint/js": "^9.1.1",
+    "@types/styled-components": "^5.1.34",
+    "@typescript-eslint/eslint-plugin": "^7.8.0",
+    "@typescript-eslint/parser": "^7.8.0",
+    "eslint": "^9.1.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.34.1",
+    "globals": "^15.1.0",
+    "postcss-import": "^16.1.0",
+    "prettier": "^3.2.5",
+    "typescript-eslint": "^7.8.0"
   }
 }
